--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,4 +2,14 @@
 	background-color: #F4BBBB;
 	background-image: -webkit-gradient(linear, 0 0, 100% 0, color-stop(.5, #FFEFEF), color-stop(.5, transparent), to(transparent));
 	-webkit-background-size: 100px;
+	min-height: 100%;
 }
+
+table td{
+	color: skyblue;
+	}
+
+th{
+	font-size: 28px;
+	font-style: italic; 
+	}
