--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,25 +1,27 @@
 <header>
 
     <link rel="stylesheet" type="text/css" href="./static/css/style.css">
-    </header>
-    
-    <body>
-    
+</header>
+
+<body>
+    <div class="col" align="center">
+        <img src="./static/images/maneran.png" class="img-thumbnail">
+    </div>
     <div class="bg_stripe">
-      <div class="row">
-        <div class="col">
-    <p>ランキング</p>
-          <img src="./static/images/maneran.png" class="img-thumbnail">
+        <div class="row">
+            <div class="col" align="center">
+                <img src="./static/images/koidansu.png" class="img-thumbnail">
+            </div>
         </div>
-      </div>
-    
-        <table>
-    
-        <th>名前</th><th>スコア</th>
-        {% for user in ranking_data%}
-        <tr><td>{{user[0]}} </td><td>{{user[1]}}</td></tr>
-        {%endfor%}
+        <table align="center">
+            <th align="center">名前</th>
+            <th>スコア</th>
+            {% for user in ranking_data%}
+            <tr>
+                <td>{{user[0]}} </td>
+                <td>{{user[1]}}</td>
+            </tr>
+            {%endfor%}
         </table>
-        
-        </div>
-    </body>
+    </div>
+</body>
