staicファイルの追加
以前のcommitと衝突するので注意

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,27 +1,166 @@
-<header>
+<!doctype html>
+<html lang="ja">
 
-    <link rel="stylesheet" type="text/css" href="./static/css/style.css">
-</header>
+<head>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <script type="text/javascript"
+        src="https://github.com/nagix/chartjs-plugin-colorschemes/releases/download/v0.2.0/chartjs-plugin-colorschemes.min.js"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+    <title>真似ラン！</title>
+</head>
 
 <body>
-    <div class="col" align="center">
-        <img src="./static/images/maneran.png" class="img-thumbnail">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous ">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous ">
+        </script>
+
+    <table border="0" cellpadding="5" cellspacing="0" width="100%" height="100%">
+        <tr>
+            <td width="20%" height="20%" align="left">
+                <img src="static/images/koidansu.png" width="100%">
+            </td>
+            <td width="90%" height="20%" align="center">
+                <img src="static/images/maneran.png">
+            <td width="10%" height="20%">
+            </td>
+        </tr>
+        <tr>
+            <td height="10%" align="center" colspan="3">
+                曲名 <h1 style="display:inline;"> 恋ダンス </h1>
+                <!--ここ曲名 -->
+
+        <tr>
+            <td colspan="3" align="center">
+                <div style="overflow-y:scroll; width:100%; height:250px;">
+
+                    <canvas id="ex_chart"></canvas>
+
+                    <script>
+                        var ctx = document.getElementById('ex_chart');
+                        var data = {
+                            labels: {{userData | tojson}},		//ここにランクをぶちこむ
+                            datasets: [{
+                                label: "得点",
+                                data: {{scoreData | tojson}},				//ここにソートしたスコアデータをぶちこむ
+                            }]
+                        };
+
+                        var options = {
+                            plugins: {
+                                colorschemes: {
+                                    scheme: 'brewer.Paired10'
+                                }
+                            },
+                            scales: {
+                                yAxes: [{
+                                    barPercentage: 1.2,
+                                    ticks: {
+                                        fontSize: 18,
+                                    }
+                                }],
+                                xAxes: [{
+                                    ticks: {
+                                        min: 0,
+                                        max: 100
+                                    }
+                                }]
+                            },
+                            legend: {
+                                display: false
+                            }
+                        };
+
+                        var ex_chart = new Chart(ctx, {
+                            type: 'horizontalBar',
+                            data: data,
+                            options: options
+                        })
+                    </script>
+                </div>
+            </td>
+        </tr>
+        {% if score %}
+        <tr>
+            <td width="100%" height="10%" colspan="3">
+                <div style="width:100%; height:100px;">
+                    <canvas id="dx_chart" height="50px"></canvas>
+
+                    <script>
+                        var dtx = document.getElementById('dx_chart');
+
+                        var data2 = {
+                            labels: ["11th YOU\t\t\t"],
+                            datasets: [{
+                                label: '得点',
+                                data: [{{ score }}],						//ここに"YOU"のスコアデータをぶちこむ
+                                backgroundColor: "rgba(255,0,0,0.4)"
+                            }]
+                        };
+
+                        var options2 = {
+                            scales: {
+                                yAxes: [{
+                                    barPercentage: 1.0,
+                                    ticks: {
+                                        fontSize: 20,
+                                    }
+                                }],
+                                xAxes: [{
+                                    ticks: {
+                                        min: 0,
+                                        max: 100
+                                    }
+                                }]
+
+                            },
+                            legend: {
+                                display: false
+                            },
+                            layout: {                             //レイアウト
+                                padding: {
+                                    //余白設定
+                                    right: 0,
+                                    top: 0,
+                                    bottom: 0
+                                }
+                            }
+
+                        };
+
+                        var dx_chart = new Chart(dtx, {
+                            type: 'horizontalBar',
+                            data: data2,
+                            options: options2
+                        })
+                    </script>
+        </tr>
+        {% endif %}
+        <tr>
+            <td width="100%" align="right" colspan="2" height="5%">
+            </td>
+            <td width="100%" align="right" height="5%">
+                <img src="static/images/dance_shoot_dance.png">
+            </td>
+        </tr>
+    </table>
     </div>
-    <div class="bg_stripe">
-        <div class="row">
-            <div class="col" align="center">
-                <img src="./static/images/koidansu.png" class="img-thumbnail">
-            </div>
-        </div>
-        <table align="center">
-            <th align="center">名前</th>
-            <th>スコア</th>
-            {% for user in ranking_data%}
-            <tr>
-                <td>{{user[0]}} </td>
-                <td>{{user[1]}}</td>
-            </tr>
-            {%endfor%}
-        </table>
-    </div>
+
 </body>
+
+</html>
