--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,71 @@
-.bg_stripe{
-	background-color: #F4BBBB;
-	background-image: -webkit-gradient(linear, 0 0, 100% 0, color-stop(.5, #FFEFEF), color-stop(.5, transparent), to(transparent));
-	-webkit-background-size: 100px;
-	min-height: 100%;
+body {
+    font-family: Roboto, 'Droid Sans', 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic'
+
+
 }
 
-table td{
-	color: skyblue;
-	}
+html,
+body {
+    background: #fffeff;
+    bottom: 0;
+    overflow: hidden;
+}
 
-th{
-	font-size: 28px;
-	font-style: italic; 
-	}
+.ranking {
+    overflow: auto;
+}
+
+.meter-you {
+    background: linear-gradient(90deg, orange 0%, orange 56.1%, rgb(240, 240, 240) 56.1%, rgb(240, 240, 240) 100%);
+
+    height: 40px;  
+    width: 150%;
+}
+
+.meter-red {
+    background: linear-gradient(90deg, #f17d7d 0%, #f17d7d 98.7%, rgb(240, 240, 240) 98.7%, rgb(240, 240, 240) 100%);
+    height: 40px;  
+    width: 150%;
+    
+}
+
+.meter {
+    background: linear-gradient(90deg, gray 0%, gray 98.7%, rgb(240, 240, 240) 98.7%, rgb(240, 240, 240) 100%);
+    height: 40px;  
+    width: 150%;
+}
+
+.meter-first {
+    background: linear-gradient(90deg, #f17d7d 0%, #f17d7d 98.7%, rgb(240, 240, 240) 98.7%, rgb(240, 240, 240) 100%);
+    height: 40px;  
+    width: 150%;
+}
+
+.meter-second {
+    background: linear-gradient(90deg, #f1b67d 0%, #f1b67d 98.7%, rgb(240, 240, 240) 98.7%, rgb(240, 240, 240) 100%);
+    height: 40px;  
+    width: 150%;
+}
+
+.meter-third {
+    background: linear-gradient(90deg, #e0f17d 0%, #e0f17d 98.7%, rgb(240, 240, 240) 98.7%, rgb(240, 240, 240) 100%);
+    height: 40px;  
+    width: 150%;
+}
+
+
+
+img#floatButton2{
+    position: fixed;
+    right: 10%;
+    bottom: 10%;
+}
+
+footer {
+  margin-top: auto;
+}
+
+img {
+max-width: 100%;
+height: auto;
+}
