--- a/templates/regist.html
+++ b/templates/regist.html
@@ -1,10 +1,23 @@
 <header>
-    <p>名前入力欄</p>
-    </header>
-<body>
-    <form method="post" action="http://192.168.3.128:8000/set_name" id="f1">
-     <p>名前を入力<input type="text" name="name" /></p>
-     <input type="hidden" name="id" value="{{id_number}}">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
-     </form>
-</body>
+        </header>
+    <body style="background: #fff3ff">
+        <div class="col" align="center">
+            <img src="../static/images/Televice.png" class="img-thumbnail">
+        
+        <form method="post" action="http://localhost:8000/set_name" id="f1">
+         <p>名前：<input type="text" name="name" /></p>
+         <input type="hidden" name="id" value="{{id_number}}">
+        <input type="submit" value="送信する">
+         </form>
+         </div>
+             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      
+    </body>
